sumo/tests/sumo/errors/invalid_time/errors.sumo
Error: Input string 'invalidInput' cannot be parsed as a time
Quitting (on error).
